--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 /* General styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +22,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--color-primary);
   display: flex;
   justify-content: center;
@@ -31,7 +32,7 @@ body {
 .main-content {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -49,14 +50,15 @@ body {
 
 /* Game section */
 .game-section {
+  width: 100%;
   background-color: var(--color-secondary);
   border: 0.25rem solid var(--color-black);
   border-radius: 3rem 3rem 0 0;
   display: flex;
   padding: 3rem 5rem 3rem 5rem;
-  width: 100%;
-  height: 100%;
   justify-content: space-between;
+  position: bottom;
+  flex-grow: 1;
 }
 
 .input-section {
@@ -408,11 +410,12 @@ ul {
   /* Game section */
   .game-section {
     flex-direction: column;
+    height: 100%;
   }
 
   .input-section {
     padding-right: 0;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
     border-right: none;
     border-bottom: 2px solid var(--color-black);
     max-width: 100%;
@@ -498,5 +501,6 @@ ul {
 
   .button-name {
     font-size: 1rem;
+    gap: 0.5rem;
   }
 }
